--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   <body>
     <form class="navbar-form navbar-left" role="search">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
+        <input type="number" class="form-control" placeholder="Saisissez le solde de votre compte TH" min="0" />
       </div>
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button type="submit" class="btn btn-default">Soumettre</button>
     </form>
     
     <h1>Hello, world!</h1>
@@ -36,7 +36,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>  
     <script>
-      alert('Hello Eko')
+      // alert('Hello Eko')
     </script>
   </body>
 </html>
