--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,24 +20,50 @@
       <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
-    <form class="navbar-form navbar-left" role="search">
-      <div class="form-group">
-        <input type="number" class="form-control" placeholder="Saisissez le solde de votre compte TH" min="0" />
-      </div>
-      <button type="submit" class="btn btn-default">Soumettre</button>
-    </form>
-    
-    <h1>Hello, world!</h1>
+</head>
+
+<body>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="row">
+                <div class="col-md-4">.col-md-4</div>
+                <div class="col-md-4">.
+                    <h1>Hello, world!</h1>
+
+                    <form class="navbar-form navbar-left" role="search">
+                        <div class="form-group">
+                            <input type="number" class="form-control" placeholder="Saisissez le solde de votre compte TH" min="0" />
+                        </div>
+                        <button type="submit" class="btn btn-default">Soumettre</button>
+                    </form>
+
+                    <div class="panel panel-default">
+                        <!-- Table -->
+                        <table class="table">
+                            <tr>
+                                <td class="active">...</td>
+                                <td class="success">...</td>
+                                <td class="warning">...</td>
+                                <td class="danger">...</td>
+                                <td class="info">...</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <div class="col-md-4">.col-md-4</div>
+            </div>
+        </div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script>
-      // alert('Hello Eko')
+        // alert('Hello Eko')
     </script>
-  </body>
+</body>
+
 </html>
