--- a/index.html
+++ b/index.html
@@ -26,33 +26,75 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="row">
-                <div class="col-md-4">.col-md-4</div>
-                <div class="col-md-4">.
-                    <h1>Hello, world!</h1>
+            <div class="col-md-4"></div>
+            <div class="col-md-4">.
+                <h1>Hello, world!</h1>
 
-                    <form class="navbar-form navbar-left" role="search">
+                <form class="row navbar-form navbar-left" role="search">
+                    <div class="col-md-10">
                         <div class="form-group">
                             <input type="number" class="form-control" placeholder="Saisissez le solde de votre compte TH" min="0" />
-                        </div>
-                        <button type="submit" class="btn btn-default">Soumettre</button>
-                    </form>
-
-                    <div class="panel panel-default">
-                        <!-- Table -->
-                        <table class="table">
-                            <tr>
-                                <td class="active">...</td>
-                                <td class="success">...</td>
-                                <td class="warning">...</td>
-                                <td class="danger">...</td>
-                                <td class="info">...</td>
-                            </tr>
-                        </table>
+                        </div>                            
                     </div>
+                    <div class="col-md-2">
+                        <button type="submit" class="btn btn-default">Soumettre</button>
+                    </div>
+                </form>
+
+                <div class="panel panel-default">
+                    <!-- Table -->
+                    <table class="table">
+                        <tr>
+                            <th rowspan="2">USDT Quantité</th>
+                            <th rowspan="2">Phase</th>
+                            <th rowspan="2">Le montant de ma transaction</th>
+                            <th>Démo d'équipe 1000 USDT</th>
+                        </tr>
+                        <tr>
+                            <th>Montant de la transaction</th>
+                        </tr>
+                        <tr>
+                            <td colspan="7">
+
+                            </td>
+                            <td>Phase 1</td>
+                            <td>$</td>
+                            <td>$6</td>
+                        </tr>
+                        <tr>
+                            <td>Phase 2</td>
+                            <td>$</td>
+                            <td>$12</td>
+                        </tr>
+                        <tr>
+                            <td>Phase 3</td>
+                            <td>$</td>
+                            <td>$26</td>
+                        </tr>
+                        <tr>
+                            <td>Phase 4</td>
+                            <td>$</td>
+                            <td>$56</td>
+                        </tr>
+                        <tr>
+                            <td>Phase 5</td>
+                            <td>$</td>
+                            <td>$120</td>
+                        </tr>
+                        <tr>
+                            <td>Phase 6</td>
+                            <td>$</td>
+                            <td>$250</td>
+                        </tr>
+                        <tr>
+                            <td>Phase 7</td>
+                            <td>$</td>
+                            <td>$520</td>
+                        </tr>
+                    </table>
                 </div>
-                <div class="col-md-4">.col-md-4</div>
             </div>
+            <div class="col-md-4"></div>
         </div>
     </div>
 
