--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 </form>
 
                 <div class="panel panel-default">
-                    <table class="table">
-                        <tr>
+                    <table class="table" width="100%">
+                        <!-- <tr>
                             <th rowspan="2">USDT Quantité</th>
                             <th rowspan="2">Phase</th>
                             <th rowspan="2">Le montant de ma transaction</th>
@@ -51,7 +51,7 @@
                         </tr>
                         <tr>
                             <th>Montant de la transaction</th>
-                        </tr>
+                        </tr> -->
                         <tr>
                             <td colspan="7">
 
