--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             <div class="col-md-4">.
                 <h1>Hello, world!</h1>
 
-                <form class="row navbar-form navbar-left" role="search">
+                <form id="balance" class="row navbar-form navbar-left" role="search">
                     <div class="col-md-10">
                         <div class="form-group">
-                            <input type="number" class="form-control" placeholder="Saisissez le solde de votre compte TH" min="0" />
-                        </div>                            
+                            <input name="balance" type="number" class="form-control" placeholder="Saisissez le solde de votre compte TH" min="0" />
+                        </div>
                     </div>
                     <div class="col-md-2">
                         <button type="submit" class="btn btn-default">Soumettre</button>
@@ -43,7 +43,7 @@
 
                 <div class="panel panel-default">
                     <table class="table" width="100%">
-                    <!-- 
+                        <!-- 
                         <tr>
                             <th rowspan="2">USDT Quantité</th>
                             <th rowspan="2">Phase</th>
@@ -55,7 +55,7 @@
                         </tr> 
                     -->
                         <tr>
-                            <td colspan="6">
+                            <td rowspan="6">
 
                             </td>
                             <td>Phase 1</td>
@@ -105,7 +105,11 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script>
-        // alert('Hello Eko')
+        $(document).on('submit', 'form#balance', function(e) {
+            e.preventDefault()
+            var $balance = $("form[name=balance]").val();
+            alert($balance)
+        });
     </script>
 </body>
 
