--- a/index.html
+++ b/index.html
@@ -43,19 +43,17 @@
 
                 <div class="panel panel-default">
                     <table class="table" width="100%">
-                        <!-- 
                         <tr>
-                            <th rowspan="2">USDT Quantité</th>
-                            <th rowspan="2">Phase</th>
-                            <th rowspan="2">Le montant de ma transaction</th>
+                            <th colspan="2">USDT Quantité</th>
+                            <th colspan="2">Phase</th>
+                            <th colspan="2">Le montant de ma transaction</th>
                             <th>Démo d'équipe 1000 USDT</th>
                         </tr>
                         <tr>
                             <th>Montant de la transaction</th>
                         </tr> 
-                    -->
                         <tr>
-                            <td rowspan="6">
+                            <td rowspan="7">
 
                             </td>
                             <td>Phase 1</td>
@@ -104,6 +102,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    
     <script>
         $(document).on('submit', 'form#balance', function(e) {
             e.preventDefault()
