--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
             e.preventDefault()
             var $balance = $("input[name=balance]").val();
             // alert($balance)
-            $("sapan#phase_1").html($balance*0.006);
-            $("sapan#phase_2").html($balance*0.012);
-            $("sapan#phase_3").html($balance*0.026);
-            $("sapan#phase_4").html($balance*0.056);
-            $("sapan#phase_5").html($balance*0.12);
-            $("sapan#phase_6").html($balance*0.25);
-            $("sapan#phase_7").html($balance*0.53);
+            $("span#phase_1").html($balance*0.006);
+            $("span#phase_2").html($balance*0.012);
+            $("span#phase_3").html($balance*0.026);
+            $("span#phase_4").html($balance*0.056);
+            $("span#phase_5").html($balance*0.12);
+            $("span#phase_6").html($balance*0.25);
+            $("span#phase_7").html($balance*0.53);
         });
     </script>
 </body>
