--- a/index.html
+++ b/index.html
@@ -43,17 +43,15 @@
 
                 <div class="panel panel-default">
                     <table class="table" width="100%">
-                        <!--                         
                         <tr>
-                            <th colspan="2">USDT Quantité</th>
-                            <th width="20%" class="text-center" colspan="2">Phase</th>
-                            <th width="15%" class="text-center" colspan="2">Le montant de ma transaction</th>
+                            <th rowspan="2">USDT Quantité</th>
+                            <th width="20%" class="text-center" rowspan="2">Phase</th>
+                            <th width="15%" class="text-center" rowspan="2">Le montant de ma transaction</th>
                             <th width="25%" class="text-center">Démo d'équipe 1000 USDT</th>
                         </tr>
                         <tr>
                             <th>Montant de la transaction</th>
                         </tr>
- -->
                         <tr>
                             <td rowspan="7">
                                 $<span id="balance"></span>
