--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">.
+            <div class="col-md-3"></div>
+            <div class="col-md-6">.
                 <h1>VC Transaction Plan!</h1>
                 <form id="balance" class="row navbar-form navbar-left" role="search">
                     <div class="col-md-10">
@@ -39,7 +39,7 @@
                     </div>
                 </form>
                 <div class="panel panel-default">
-                    <table class="table" width="100%">
+                    <table class="table table-bordered" width="100%">
                         <tr>
                             <th rowspan="2">USDT Quantité</th>
                             <th width="20%" class="text-center" rowspan="2">Phase</th>
@@ -90,7 +90,7 @@
                     </table>
                 </div>
             </div>
-            <div class="col-md-2"></div>
+            <div class="col-md-3"></div>
         </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
