--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <th width="25%" class="text-center">Démo d'équipe 1000 USDT</th>
                         </tr>
                         <tr>
-                            <th>Montant de la transaction</th>
+                            <th width="25%" class="text-center">Montant de la transaction</th>
                         </tr>
                         <tr>
                             <td rowspan="7">
