--- a/index.html
+++ b/index.html
@@ -93,21 +93,21 @@
                     <table class="table table-bordered" width="100%">
                         <tr>
                             <th>Objectifs</th>
-                            <th width="20%" class="text-center">%</th>
-                            <th width="15%" class="text-center" rowspan="2">Gain</th>
-                            <th width="25%" class="text-center">Total</th>
+                            <th width="10%" class="text-center">%</th>
+                            <th width="10%" class="text-center">Gain</th>
+                            <th width="10%" class="text-center">Total</th>
                         </tr>
                         <tr>
                             <td>Minimum</td>
-                            <td width="20%" class="text-center">3,9</td>
-                            <td width="15%" class="text-center">$<span id="objective_1"></span></td>
-                            <td width="25%" class="text-center">$<span id="total_1"></span></td>
+                            <td width="10%" class="text-center">3,9</td>
+                            <td width="10%" class="text-center">$<span id="objective_1"></span></td>
+                            <td width="10%" class="text-center">$<span id="total_1"></span></td>
                         </tr>
                         <tr>
                             <td>Maximum</td>
-                            <td width="20%" class="text-center">5,8</td>
-                            <td width="15%" class="text-center">$<span id="objective_2"></span></td>
-                            <td width="25%" class="text-center">$<span id="total_2"></span></td>
+                            <td width="10%" class="text-center">5,8</td>
+                            <td width="10%" class="text-center">$<span id="objective_2"></span></td>
+                            <td width="10%" class="text-center">$<span id="total_2"></span></td>
                         </tr>
                     </table>
                 </div>
