--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             $("span#objective_1").html(( $balance * 0.039 ).toFixed(3));
             $("span#total_1").html(( $balance + $balance * 0.039 ).toFixed(3));
             $("span#objective_2").html(( $balance * 0.058 ).toFixed(3));
-            $("span#total_2").html( $balance + $balance * 0.058 ).toFixed(3));
+            $("span#total_2").html((( $balance + $balance * 0.058 ).toFixed(3));
         });
     </script>
 </body>
