--- a/index.html
+++ b/index.html
@@ -135,10 +135,15 @@
             $("span#phase_6").html(($balance * 0.25).toFixed(3));
             $("span#phase_7").html(($balance * 0.53).toFixed(3));
 
-            $("span#objective_1").html(( $balance * 0.039 ).toFixed(3));
-            $("span#total_1").html(( $balance + $balance * 0.039 ).toFixed(3));
-            $("span#objective_2").html(( $balance * 0.058 ).toFixed(3));
-            $("span#total_2").html(( $balance + $balance * 0.058 ).toFixed(3));
+            var $objective_1 = ($balance * 0.039).toFixed(3);
+            var $objective_2 = ($balance * 0.058).toFixed(3);
+            var $total_1 = ($balance + $objective_1).toFixed(3);
+            var $total_2 = ($balance + $objective_2).toFixed(3);
+            
+            $("span#objective_1").html($objective_1);
+            $("span#total_1").html($total_1);
+            $("span#objective_2").html($objective_2);
+            $("span#total_2").html($total_2);
         });
     </script>
 </body>
